tests/errors/parser/cell-missing-semi.expect
---CODE---
1
---STDERR---
Error: FuTIL Parser:  --> tests/errors/parser/cell-missing-semi.futil:3:5
  |
3 |     r = prim std_reg(32)âŠ
  |     ^---
  |
  = expected cell
